--- a/src/components/Result/styles.scss
+++ b/src/components/Result/styles.scss
@@ -1,8 +1,8 @@
 .base {
   background: rgba(0, 0, 0, 0.75);
   color: #f9f9f9;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 1rem;
+  font-family: ABCSans, Arial, Helvetica, sans-serif;
+  font-size: 1.2rem;
   line-height: 1.66666667;
   padding: 20px;
   text-transform: uppercase;
@@ -38,7 +38,7 @@
 @media screen and (max-device-width: 500px) {
   .base {
     padding: 8px;
-    font-size: 0.95rem;
+    font-size: 1.05rem;
   }
 }
 
