--- a/src/components/App/styles.scss
+++ b/src/components/App/styles.scss
@@ -20,7 +20,7 @@
 
 :global(:not(.is-contained).VideoPlayer video:not([controls])),
 :global(.VideoPlayer _:-ms-lang(x)) {
-  width: initial !important;
+  width: 100% !important;
 }
 
 @media screen and (max-device-width: 500px) {
