--- a/src/components/App/styles.scss
+++ b/src/components/App/styles.scss
@@ -18,8 +18,8 @@
   }
 }
 
-:global(.guesser :not(.is-contained).VideoPlayer video:not([controls])),
-:global(.guesser .VideoPlayer _:-ms-lang(x)) {
+:global(:not(.is-contained).VideoPlayer video:not([controls])),
+:global(.VideoPlayer _:-ms-lang(x)) {
   width: 100% !important;
 }
 
